--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@ body{
     align-items: center;
     min-height: 95vh;
 }
-button{
+button.react-btn{
     width: 125px;
     height: 50px;
     background: cyan;
@@ -21,7 +21,7 @@ button{
     font-weight: 500;
     margin-left: 82.5px;
 }
-button:hover{
+button.react-btn:hover{
     background: #00ebeb;
     cursor: pointer;
 }
@@ -33,6 +33,14 @@ img{
     transform-origin: center;
     transform-box: fill-box;
 }
+@keyframes app-logo-spin {
+    from{
+        transform: rotateZ(0);
+    }
+    to{
+        transform: rotateZ(360deg);
+    }
+}
 h1{
     font-size: 32px;
     font-weight: 700;
@@ -42,22 +50,14 @@ p{
     font-size: 18px;
     font-weight: 400;
 }
-a{
+a.react-link{
     font-size: 23.5px;
     font-weight: 500;
     color: #00d8ff;
     margin-left: 75px;
 }
-@keyframes app-logo-spin {
-    from{
-        transform: rotateZ(0);
-    }
-    to{
-        transform: rotateZ(360deg);
-    }
-}
 @media screen and (max-width: 1024px) {
-    h1, p{
+    h1{
         font-size: 28.5px;
         font-weight: 700;
         color: white;
@@ -68,13 +68,13 @@ a{
         font-size: 17.5px;
         font-weight: 400; 
     }
-    a{
+    a.react-link{
         font-size: 21.5px;
         font-weight: 500;
         color: #00d8ff;
-        margin-left: 86.5px;
+        margin-left: 85px;
     }
-    button{
+    button.react-btn{
         width: 125px;
         height: 50px;
         background: cyan;
@@ -84,16 +84,16 @@ a{
         font-size: 17.5px;
         font-weight: 500;
         cursor: pointer;
-        margin-left: 89.5px;
+        margin-left: 86.5px;
     }
     img{
-        width: 185px;
-        height: 185px;
-        margin-left: 63.5px;
+        width: 215px;
+        height: 215px;
+        margin-left: 45px;
     }
 }
 @media screen and (max-width: 500px) {
-    h1, p{
+    h1{
         font-size: 25px;
         font-weight: 700;
         color: white;
@@ -104,13 +104,13 @@ a{
         font-size: 16px;
         font-weight: 400; 
     }
-    a{
+    a.react-link{
         font-size: 20px;
         font-weight: 500;
         color: #00d8ff;
-        margin-left: 83.5px;
+        margin-left: 78.5px;
     }
-    button{
+    button.react-btn{
         width: 125px;
         height: 50px;
         background: cyan;
@@ -120,11 +120,14 @@ a{
         font-size: 16px;
         font-weight: 500;
         cursor: pointer;
-        margin-left: 86.5px;
+        margin-left: 76.5px;
     }
     img{
-        width: 150px;
-        height: 150px;
-        margin-left: 68.5px;
+        width: 185px;
+        height: 185px;
+        margin-left: 43.5px;
+    }
+    .main{
+        margin-top: 10.938rem;
     }
 }
