--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@400;500;600;700&family=Montserrat:wght@400;500;700&display=swap');
 *{
     font-family: 'Montserrat', sans-serif;
 }
@@ -33,6 +33,9 @@ img{
     transform-origin: center;
     transform-box: fill-box;
 }
+.main{
+    margin-top: 8.281rem;
+}
 @keyframes app-logo-spin {
     from{
         transform: rotateZ(0);
@@ -41,12 +44,12 @@ img{
         transform: rotateZ(360deg);
     }
 }
-h1{
+h1.heading{
     font-size: 32px;
     font-weight: 700;
     text-align: center;
 }
-p{
+p.paragraph{
     font-size: 18px;
     font-weight: 400;
 }
@@ -57,14 +60,17 @@ a.react-link{
     margin-left: 75px;
 }
 @media screen and (max-width: 1024px) {
-    h1{
+    .main{
+        margin-top: 5.781rem;
+    }
+    h1.heading{
         font-size: 28.5px;
         font-weight: 700;
         color: white;
         text-align: center;
         margin-left: 12.5px;
     }
-    p{
+    p.paragraph{
         font-size: 17.5px;
         font-weight: 400; 
     }
@@ -92,15 +98,29 @@ a.react-link{
         margin-left: 45px;
     }
 }
+@media screen and (max-width: 768px) {
+    .main{
+        margin-top: 9.375rem;
+    }
+}
+@media screen and (max-width: 545px) {
+    .main{
+        margin-top: 14.531rem;
+    }
+    h1.heading,
+    p.paragraph{ 
+        margin-top: -5px;
+    }
+}
 @media screen and (max-width: 500px) {
-    h1{
+    h1.heading{
         font-size: 25px;
         font-weight: 700;
         color: white;
         text-align: center;
         margin-left: 10px;
     }
-    p{
+    p.paragraph{
         font-size: 16px;
         font-weight: 400; 
     }
@@ -128,6 +148,6 @@ a.react-link{
         margin-left: 43.5px;
     }
     .main{
-        margin-top: 10.938rem;
+        margin-top: 13.656rem;
     }
 }
