--- a/src/components/Banner.css
+++ b/src/components/Banner.css
@@ -1,24 +1,40 @@
 .banner{
     width: 100%;
-    height: 65px;
+    height: 135px;
 	position: absolute;
     display: flex;
+    flex-direction: column;
+    overflow: visible;
 	top: 0;
 	left: 0;
     justify-content: center;
     align-items: center;
     background: #00b5df;
-    animation: fade-down 0.5s linear;
+    transition: 0.5s;
 }
-@keyframes fade-down {
-    0%{
-        opacity: 0;
-        margin-top: -65px;
-    }
-    100%{
-        opacity: 1;
-        margin-top: 0;
-    }
+.banner-main-content{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: -35px;
+}
+.banner-content{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.banner-text-content{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+svg.info-icon{
+    width: 52.5px;
+    height: 52.5px;
+    margin-right: 10px;
+}
+g#info{
+    fill: none;
 }
 p.banner-text{
     font-size: 20px;
@@ -36,54 +52,22 @@ a.github-repo{
 a.github-repo:hover{
     color: #00d5ef;
 }
-.banner-content{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.banner-text-content{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.banner-close{
-    width: 50px;
-    height: 50px;
-    background: none;
-    border: none;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-    transition: 0.5s;
-    margin-left: 5px;
-}
-.banner-close:hover{
-    background: #00bfe5;
-}
-.banner.remove{
-    opacity: 0;
-    margin-top: -65px;
-    transition: 0.5s;
-}
-svg.plus-icon{
-    width: 45px;
-    height: 45px;
-}
-g#plus{
-    transform: rotate(45deg);
-    transform-origin: center;
-    transform-box: fill-box;
-}
-svg.info-icon{
-    width: 52.5px;
-    height: 52.5px;
-    margin-right: 10px;
-}
-g#info{
-    fill: none;
-}
 @media screen and (max-width: 1024px) {
+    .banner{
+        width: 100%;
+        height: 125px;
+        position: absolute;
+        display: flex;
+        flex-direction: column;
+        top: 0;
+        left: 0;
+        justify-content: center;
+        align-items: center;
+        background: #00b5df;
+    }
+    .banner-main-content{
+        margin-bottom: -25px;
+    }
     p.banner-text{
         font-size: 18px;
         font-weight: 500;
@@ -95,20 +79,6 @@ g#info{
         color: #00c5df;
         text-decoration: none;
         margin-left: 10px;
-    }
-    .banner-close{
-        width: 45px;
-        height: 45px;
-        background: none;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        transition: 0.5s;
-        margin-left: 5px;
-    }
-    svg.plus-icon{
-        width: 42.5px;
-        height: 42.5px;
     }
     svg.info-icon{
         width: 50px;
@@ -128,20 +98,6 @@ g#info{
         color: #00c5df;
         text-decoration: none;
         margin-left: 10px;
-    }
-    .banner-close{
-        width: 42.5px;
-        height: 42.5px;
-        background: none;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        transition: 0.5s;
-        margin-left: 5px;
-    }
-    svg.plus-icon{
-        width: 38.5px;
-        height: 38.5px;
     }
     svg.info-icon{
         width: 45px;
@@ -185,14 +141,18 @@ g#info{
 @media screen and (max-width: 768px) {
     .banner{
         width: 100%;
-        height: 85px;
+        height: 165px;
         position: absolute;
         display: flex;
+        flex-direction: column;
         top: 0;
         left: 0;
         justify-content: center;
         align-items: center;
         background: #00b5df;
+    }
+    .banner-main-content{
+        margin-bottom: -12.5px;
     }
     .banner-text-content{
         display: flex;
@@ -251,6 +211,18 @@ g#info{
     }
 }
 @media screen and (max-width: 725px) {
+    .banner{
+        width: 100%;
+        height: 150px;
+        position: absolute;
+        display: flex;
+        flex-direction: column;
+        top: 0;
+        left: 0;
+        justify-content: center;
+        align-items: center;
+        background: #00b5df;
+    }
     p.banner-text{
         font-size: 18px;
         font-weight: 500;
@@ -262,20 +234,6 @@ g#info{
         color: #00c5df;
         text-decoration: none;
         margin-left: 10px;
-    }
-    .banner-close{
-        width: 45px;
-        height: 45px;
-        background: none;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        transition: 0.5s;
-        margin-left: 5px;
-    }
-    svg.plus-icon{
-        width: 42.5px;
-        height: 42.5px;
     }
     svg.info-icon{
         width: 50px;
@@ -305,10 +263,6 @@ g#info{
         align-items: center;
         transition: 0.5s;
         margin-left: 5px;
-    }
-    svg.plus-icon{
-        width: 38.5px;
-        height: 38.5px;
     }
     svg.info-icon{
         width: 45px;
@@ -350,12 +304,9 @@ g#info{
     }
 }
 @media screen and (max-width: 545px) {
-    .main{
-        margin-top: 10.781rem;
-    }
     .banner{
         width: 100%;
-        height: 175px;
+        height: 232.5px;
         position: absolute;
         display: flex;
         top: 0;
@@ -393,20 +344,6 @@ g#info{
         justify-content: center;
         align-items: center;
     }
-    .banner-close{
-        width: 52.5px;
-        height: 52.5px;
-        background: none;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        transition: 0.5s;
-        margin-right: 15px;
-    }
-    svg.plus-icon{
-        width: 48.5px;
-        height: 48.5px;
-    }
     svg.info-icon{
         width: 56.5px;
         height: 56.5px;
@@ -416,7 +353,7 @@ g#info{
 @media screen and (max-width: 500px) {
     .banner{
         width: 100%;
-        height: 165px;
+        height: 218.5px;
         position: absolute;
         display: flex;
         top: 0;
@@ -437,24 +374,10 @@ g#info{
         text-decoration: none;
         margin-left: 10px;
     }
-    .banner-close{
-        width: 50px;
-        height: 50px;
-        background: none;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        transition: 0.5s;
-        margin-left: 5px;
-    }
     svg.info-icon{
         width: 52.5px;
         height: 52.5px;
         margin-left: 15px;
-    }
-    svg.plus-icon{
-        width: 45px;
-        height: 45px;
     }
 }
 @media screen and (max-width: 450px) {
@@ -469,20 +392,6 @@ g#info{
         color: #00c5df;
         text-decoration: none;
         margin-left: 10px;
-    }
-    .banner-close{
-        width: 45px;
-        height: 45px;
-        background: none;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        transition: 0.5s;
-        margin-left: 5px;
-    }
-    svg.plus-icon{
-        width: 42.5px;
-        height: 42.5px;
     }
     svg.info-icon{
         width: 50px;
@@ -523,6 +432,17 @@ g#info{
     }
 }
 @media screen and (max-width: 325px) {
+    .banner{
+        width: 100%;
+        height: 182.5px;
+        position: absolute;
+        display: flex;
+        top: 0;
+        left: 0;
+        justify-content: center;
+        align-items: center;
+        background: #00b5df;
+    }
     p.banner-text{
         font-size: 14.5px;
         font-weight: 500;
